<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/title_account"
        android:title="@string/ad_cat2">
        <menu>
            <item
                android:id="@+id/id_sign_up"
                android:title="@string/ad_sign_up" />
            <item
                android:id="@+id/id_sign_in"
                android:title="@string/ad_sign_in" />
            <item
                android:id="@+id/id_sign_out"
                android:title="@string/ad_sign_out" />
        </menu>
    </item>

    <item
        android:id="@+id/ad_title_sale"
        android:title="@string/ad_title_sale">
        <menu>
            <item
                android:id="@+id/id_my_ads"
                android:title="@string/ad_my_ads" />
            <item
                android:id="@+id/ad_title_sale_guitar"
                android:title="@string/ad_title_sale_guitar" />
            <item
                android:id="@+id/ad_title_sale_keyboards"
                android:title="@string/ad_title_sale_keyboards" />
        </menu>
    </item>
</menu>