<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ad"
            type="dev.fest.patephone.model.Ad" />
    </data>

    <FrameLayout
        android:id="@+id/placeHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:theme="@style/AppTheme.NoActionBar"
        tools:context=".activity.EditAdsActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/backgroundColor"
                    app:cardCornerRadius="5dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/viewPagerImages"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:padding="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ProgressBar
                            android:id="@+id/progressBarEditAds"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@+id/viewPagerImages"
                            app:layout_constraintEnd_toEndOf="@+id/viewPagerImages"
                            app:layout_constraintStart_toStartOf="@+id/viewPagerImages"
                            app:layout_constraintTop_toTopOf="@+id/viewPagerImages" />

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edit_image_button"
                            android:onClick="onClickGetImages"
                            android:padding="5dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_edit" />

                        <TextView
                            android:id="@+id/textViewImageCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/backgroundColor"
                            android:padding="5dp"
                            android:text="1/3"
                            android:textColor="@color/primaryText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/backgroundColor"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/country"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickSelectCountry"
                            android:padding="10dp"
                            android:text="@string/select_country"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/city"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickSelectCity"
                            android:padding="10dp"
                            android:text="@string/select_city"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewTelephone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/telephone"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editTextTelephone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/telephone_number"
                            android:inputType="phone"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent" />

                        <LinearLayout
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/backgroundColor"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewTypeInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_type_instrument"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectTypeInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_type_instrument"
                            android:onClick="onClickSelectTypeInstrument"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider01"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/backgroundColor"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewNameInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/name_instrument"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editTextNameInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/name_instrument_hint"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent" />

                        <LinearLayout
                            android:id="@+id/divider02"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/backgroundColor"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewTitlePrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/price_instrument"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/editTextPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@null"
                                android:ems="10"
                                android:hint="@string/price_instrument_hint"
                                android:inputType="number"
                                android:padding="10dp"
                                android:textColor="@color/primaryText"
                                android:textColorHint="@color/colorAccent" />

                            <Spinner
                                android:id="@+id/spinnerSelectTypeMoney"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="4"
                                android:dropDownWidth="70dp"
                                android:entries="@array/typeMoney"
                                android:backgroundTint="@color/primaryText"
                                 />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/divider03"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/backgroundColor"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/description_instrument"
                            android:textColor="@color/primaryText"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editTextDescriptionInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/description_instrument_hint"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent" />

                        <LinearLayout
                            android:id="@+id/divider04"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/backgroundColor"
                            android:orientation="horizontal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonAddAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/backgroundColor"
                    android:onClick="onClickPublishAd"
                    android:text="@string/button_send_ad"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>