<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".activity.FilterActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/backgroundColor"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/country"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickSelectCountry"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/colorAccent"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/city"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickSelectCity"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/colorAccent"
                            android:orientation="horizontal" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/backgroundColor"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewTypeInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/title_type_instrument"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSelectTypeInstrument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickSelectTypeInstrument"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider01"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/colorAccent"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textViewTitlePrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:inputType="number"
                            android:text="@string/price_instrument"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/editTextPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:padding="10dp"
                            android:textColor="@color/primaryText"
                            android:textColorHint="@color/colorAccent" />

                        <LinearLayout
                            android:id="@+id/divider02"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorAccent"
                            android:orientation="horizontal" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonDoneFilter"
                    style="@style/Button"
                    android:text="@string/button_apply"/>

                <TextView
                    android:id="@+id/textViewClearFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Очистить фильтр"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>